<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/btn_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center_horizontal">
    <TextView
        android:id="@+id/plus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        android:text="@string/add"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/plus_btn"
        android:padding="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/delete"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/btn_lyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compartmentList"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/dest_text_view"
         android:layout_below="@+id/compartmentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/destination_coach"/>
   <EditText
       android:id="@+id/dest_coach_edit_text"
       android:layout_toRightOf="@+id/dest_text_view"
       android:layout_alignBaseline="@+id/dest_text_view"
       android:layout_below="@+id/compartmentList"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_10"
       android:hint="@string/destination_coach"/>
    <Button
        android:id="@+id/find_btn"
        android:layout_below="@+id/dest_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/find"/>
    <Button
        android:id="@+id/reset_btn"
        android:layout_toRightOf="@+id/find_btn"
        android:layout_below="@+id/dest_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/reset"/>
    <TextView
        android:id="@+id/result_textView"
        android:layout_below="@+id/find_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"/>
</RelativeLayout>